Update swagger models
